@@ -22,6 +22,7 @@
 - Fixed hashcat_ctx leak and refactor module and kernel existence checks
 - Fixed integer overflow in Recovered/Time status view column caused by division > 0 but < 1
 - Fixed memory leak in iconv_ctx and iconv_tmp in backend.c
+- Fixed missing option to automatically disable kernel cache in -m 25600 and -m 25800
 - Fixed out-of-boundary write in slow candidates mode in combinator attack
 
 ##
